[package]
name = "lexe-tls"
version = "0.1.0"
license = "MIT"
description = "Lexe TLS configs, certs, and utilities"
documentation = "https://docs.rs/lexe-tls"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
exclude = [
    "/test_data"
]
publish = true

# Config for testing in SGX
# Need more threads and more stack for tokio. See: lexe-common/Cargo.toml.
[package.metadata.fortanix-sgx]
stack-size = 0x20_0000
threads = 4

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "lexe-common/test-utils",
  "lexe-crypto/test-utils",
  "dep:proptest",
  "dep:proptest-derive",
  "dep:tokio-rustls",
]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { workspace = true }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-enclave = { workspace = true }
lexe-hex = { workspace = true }
lexe-serde = { workspace = true }
lexe-sha256 = { workspace = true }
lexe-tls-core = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
asn1-rs = { workspace = true }
base64 = { workspace = true }
dcap-ql = { workspace = true }
num-bigint = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls-webpki = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sgx-isa = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["time"] }
webpki-roots = { workspace = true }
x509-parser = { workspace = true }
yasna = { workspace = true }

# --- OPTIONAL --- #
# These must have `optional = true` to prevent infecting production binaries.

proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
tokio-rustls = { optional = true, workspace = true }

[dev-dependencies]
lexe-common = { workspace = true, features = ["test-utils"] }
lexe-crypto = { workspace = true, features = ["test-utils"] }

proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "test-util"] }
tokio-rustls = { workspace = true }
