[package]
name = "lexe-tokio"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20_000.
stack-size = 0x20_0000
# The max number of threads we can spawn concurrently inside the SGX enclave.
# We give some extra room because `#[tokio::test(start_paused = true)]` etc
# spawns threads in the background. Additionally, the current fortanix rust-sgx
# `async_usercalls` implementation requires an extra thread. see:
# https://github.com/lexe-app/rust-sgx/blob/70d11205fed08e49886bb25a1ea3df19928e8287/async-usercalls/src/queues.rs#L46
threads = 8

[dependencies]

# --- LEXE --- #

# --- WORKSPACE --- #

futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "test-util",
    "time"
] }
tokio-test.workspace = true
