[package]
name = "lexe-tokio"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Config for testing in SGX
# Need more threads and more stack for tokio. See: common/Cargo.toml.
[package.metadata.fortanix-sgx]
stack-size = 0x20_0000
threads = 4

[dependencies]

# --- LEXE --- #

# --- WORKSPACE --- #

futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "test-util",
    "time"
] }
tokio-test.workspace = true
