[package]
name = "lexe"
authors.workspace = true
edition.workspace = true
license.workspace = true
# NOTE: Because this crate is published to crates.io, we need to respect
# semantic versioning; i.e. API-breaking changes should bump the minor version
# if before 1.0.0, otherwise bump the major version.
version = "0.0.0"
publish = true

[features]
# Enables a synchronous `BlockingLexeWallet` wrapper.
blocking = ["dep:async-compat", "dep:futures"]
# Enables test utilities like `InMemoryFfs`.
test-utils = ["dep:tempfile"]
# Enables unstable APIs.
unstable = []

[dependencies]

# --- LEXE --- #

common = { path = "../common" }
lexe-api = { path = "../lexe-api" }
lexe-std = { path = "../lexe-std" }
lexe-tokio = { path = "../lexe-tokio" }
logger = { path = "../logger" }
node-client = { path = "../node-client" }
payment-uri = { path = "../payment-uri" }

# --- WORKSPACE --- #

anyhow.workspace = true
bip39.workspace = true
bitcoin.workspace = true
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

# --- OPTIONAL --- #

async-compat = { workspace = true, optional = true }
futures = { workspace = true, optional = true, features = ["executor"] }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
lexe-api = { path = "../lexe-api", features = ["test-utils"] }
proptest = { workspace = true, features = ["std"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
