[package]
name = "lexe"
# NOTE: Because this crate is published to crates.io, we need to respect
# semantic versioning; i.e. API-breaking changes should bump the minor version
# if before 1.0.0, otherwise bump the major version.
version = "0.0.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = true

[features]
# Enables a synchronous `BlockingLexeWallet` wrapper.
blocking = ["dep:async-compat", "dep:futures"]
# Enables test utilities like `InMemoryFfs`.
test-utils = ["dep:tempfile"]
# Enables unstable APIs.
unstable = []

[dependencies]

# --- LEXE --- #

lexe-api = { path = "../lexe-api" }
lexe-common = { path = "../lexe-common" }
lexe-logger = { path = "../lexe-logger" }
lexe-node-client = { path = "../lexe-node-client" }
lexe-payment-uri = { path = "../lexe-payment-uri" }
lexe-std = { path = "../lexe-std" }
lexe-tokio = { path = "../lexe-tokio" }

# --- WORKSPACE --- #

anyhow = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

# --- OPTIONAL --- #

async-compat = { workspace = true, optional = true }
futures = { workspace = true, optional = true, features = ["executor"] }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
lexe-api = { path = "../lexe-api", features = ["test-utils"] }
lexe-common = { path = "../lexe-common", features = ["test-utils"] }

proptest = { workspace = true, features = ["std"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
