[package]
name = "logger"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    # Enable colored log outputs
    "ansi",
    "fmt",
    "registry",
    "std",
    "tracing-log",
] }
