[package]
name = "logger"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = ["common/test-utils"]

[dependencies]

# --- LEXE --- #

common = { path = "../common" }

# --- WORKSPACE --- #

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    # Enable colored log outputs
    "ansi",
    "fmt",
    "registry",
    "std",
    "tracing-log",
] }

[dev-dependencies]
# Enable common test-utils in tests
common = { path = "../common", features = ["test-utils"] }
