[package]
name = "logger"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = ["lexe-api/test-utils"]

[dependencies]

# --- LEXE --- #

lexe-api = { path = "../lexe-api" }

# --- WORKSPACE --- #

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    # Enable colored log outputs
    "ansi",
    "fmt",
    "registry",
    "std",
    "tracing-log",
] }

[dev-dependencies]
# Enable lexe-api test-utils in tests
lexe-api = { path = "../lexe-api", features = ["test-utils"] }
